--- a/templates/default.html
+++ b/templates/default.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="logo">
-                <a href="/">My Hakyll Blog</a>
+                <a href="/">hhefesto's blog</a>
             </div>
             <nav>
                 <a href="/">Home</a>
